--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <title>Fake2k's Personal Site</title>
 </head>
 
+body {
+  background-color: lightblue;
+  }
+
 <body>
   <table cellspacing="25">
     <tr>
