--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ body {
 <body>
   <table cellspacing="25">
     <tr>
-      <td><img src="rank-boosting-csgo.png" alt="Boosting Services"></td>
+      <td><img src="cs.png" alt="Boosting Services"></td>
       <td>
         <h2><em>Fake2k Boosting Service</em></h2>
         <p>Founder and CTO of CSGO Boosting Service.</p>
