--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta charset="utf-8">
   <title>Fake2k's Personal Site</title>
 </head>
-
-body {
-  background-color: lightblue;
-  }
-
+<style>
+  body {
+    background-color: lightblue;
+   }
+ </style>
 <body>
   <table cellspacing="25">
     <tr>
