--- a/index.html
+++ b/index.html
@@ -4,18 +4,15 @@
 <head>
   <meta charset="utf-8">
   <title>Fake2k's Personal Site</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
-<style>
-  body {
-    background-color: lightblue;
-   }
- </style>
+
 <body>
-  <table cellspacing="25">
+  <table cellspacing="50">
     <tr>
       <td><img src="cs.png" alt="Boosting Services"></td>
       <td>
-        <h2><em>Fake2k Boosting Service</em></h2>
+        <h2 bgcolor><em>Fake2k Boosting Service</em></h2>
         <p>Founder and CTO of CSGO Boosting Service.</p>
         <p>I am an iOS and Web Developer and Streamer. I love tea and weed.</p>
         <p>I don't do boost for stupid people.</p>
@@ -26,7 +23,7 @@
       </td>
     </tr>
   </table>
-  <hr noshade size='2' color='black'>
+  <hr>
   <h2>Boosting Rules</h2>
   <ul>
     <ol>
@@ -37,8 +34,8 @@
       <li>Don't bait.</li>
     </ol>
   </ul>
-  <hr noshade color="black">
-  <h3>Skills</h3>
+  <hr>
+  <h2>Skills</h2>
   <table border="1">
     <thead>
       <tr>
